--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,7 +118,7 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-auto relative;
   }
 }
 
